force-app/main/default/objects/Family_Portal_Guardian_Interest__c/Family_Portal_Guardian_Interest__c.object-meta.xml
<CustomObject>
    <description>This Object is used to store the guardian's interest information</description>
    <label>Family Portal Guardian Interest</label>
    <nameField>
        <displayFormat>FPGI-{0}</displayFormat>
        <label>Family Portal Guardian Interest ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Portal Guardian Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>