force-app/main/default/objects/Family_Portal_Guardian_Interest__c/fields/Active_Interest__c.field-meta.xml
<CustomField>
    <fullName>Active_Interest__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <defaultValue>true</defaultValue>
    <description>If this is checked, the interest record is considered active by the submitter. Otherwise, it's considered an inactive interest.</description>
    <label>Active Interest</label>
    <type>Checkbox</type>
</CustomField>