force-app/main/default/objects/Family_Portal_Guardian_Interest__c/fields/Chosen_Interest__c.field-meta.xml
<CustomField>
    <fullName>Chosen_Interest__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Name of the Interest</description>
    <label>Chosen Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Family_Portal_Guardian_Interest_Options</valueSetName>
    </valueSet>
</CustomField>