force-app/main/default/objects/Family_Portal_Guardian_Interest__c/fields/Guardian_Contact__c.field-meta.xml
<CustomField>
    <fullName>Guardian_Contact__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Guardian's Contact id</description>
    <label>Guardian Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Family Portal Guardian Interests</relationshipLabel>
    <relationshipName>Family_Portal_Guardian_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>