force-app/main/default/objects/Family_Portal_Guardian_Interest__c/fields/Interest_Choices__c.field-meta.xml
<CustomField>
    <fullName>Interest_Choices__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>This is used by Apex Code for the web form to display the list of Interest
for internal use only, will not contain data</description>
    <label>Interest Choices</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Family_Portal_Guardian_Interest_Options</valueSetName>
    </valueSet>
</CustomField>