force-app/main/default/objects/Family_Portal_Guardian_Interest__c/listViews/Active_Interest.listView-meta.xml
<ListView>
    <fullName>Active_Interest</fullName>
    <columns>NAME</columns>
    <columns>Guardian_Contact__c</columns>
    <columns>Chosen_Interest__c</columns>
    <columns>Family_Portal_Guardian__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Active_Interest__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active_Interest__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>*Active Interest</label>
</ListView>