force-app/main/default/objects/Family_Portal_Guardian_Interest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active_Interest__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Chosen_Interest__c</columns>
    <columns>Family_Portal_Guardian__c</columns>
    <columns>Guardian_Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Interest_Choices__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>